k8s/eks/08-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appointments-api
  namespace: demo
spec:
  selector:
    app: appointments-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
