k8s/eks/12-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-api
  namespace: demo
spec:
  selector:
    app: auth-api
  ports:
    - port: 80
      targetPort: 8081
  type: LoadBalancer
